--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
+	<title>Simple To Do List</title>
 	<link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -13,11 +13,12 @@
 		<h2>To Do List App</h2>
 		<p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
        
-		<form name="toDoList">
-			<input type="text" name="ListItem" id="input"/>
-		</form>
-    
-		<div onclick="newItem()" id="button">Add</div>
+		<div id="inputBox">
+            <form name="toDoList" id="itemInput">
+                <input type="text" name="ListItem" id="input"/>
+            </form>
+            <div onclick="newItem()" id="button">Add</div>
+        </div>
 		<br/>
 		<ol id="list"></ol>
     </div>
