fixes strike bug & makes moves click function into a js event

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <form name="toDoList" id="itemInput">
                 <input type="text" name="ListItem" id="input"/>
             </form>
-            <div onclick="newItem()" id="button">Add</div>
+            <div id="button">Add</div>
+            <!-- <div onclick="newItem()" id="button">Add</div> -->
         </div>
 		<br/>
 		<ol id="list"></ol>
