--- a/index.html
+++ b/index.html
@@ -9,28 +9,45 @@
 </head>
 
 <body>
-	<div class="container">
-		<h2>To Do List App</h2>
-		<p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
-       
-		<div id="inputBox">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand mb-0 h1" href="#">Intro to JS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse flex-grow-1 text-right" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto flex-nowrap">
+                <li class="nav-item active">
+                    <a class="nav-link" href="https://smeyer012.github.io/intro-to-js/index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://smeyer012.github.io/simple-js-app/index.html">Currency Data</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://smeyer012.github.io/currency-converter/index.html">Currency Converter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">To Do List <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <h2>To Do List App</h2>
+        <p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
+        
+        <div id="inputBox">
             <form name="toDoList" id="itemInput">
                 <input type="text" name="ListItem" id="input"/>
             </form>
             <div id="button">Add</div>
             <!-- <div onclick="newItem()" id="button">Add</div> -->
         </div>
-		<br/>
-		<ol id="list"></ol>
+        <br/>
+        <ol id="list"></ol>
     </div>
-  <script
-  src="https://code.jquery.com/jquery-3.5.1.js"
-  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-  crossorigin="anonymous"></script>
-  <script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"
-  integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
-  crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
+</body>
 </html>
